Ajustes card's chamados.
